Angular - import unity WebGL and add communication

--- a/reading-fluency-application/src/app/unity-web-gl/unity-web-gl.component.html
+++ b/reading-fluency-application/src/app/unity-web-gl/unity-web-gl.component.html
@@ -1,1 +1,4 @@
-<p>unity-web-gl works!</p>
+<p>Unity WebGL</p>
+
+<div id="gameContainer" class="testen"
+	 style="display: block; width: 100%; min-height: 0px; background: none !important;"></div>
