--- a/reading-fluency-application/src/app/scene-overview/scene-overview.component.html
+++ b/reading-fluency-application/src/app/scene-overview/scene-overview.component.html
@@ -1,1 +1,53 @@
-<p>scene-overview works!</p>
+<div class="container-fluid text-center">
+	<div class="row-spaced justify-content-center">
+		<div class="col-md-12">
+			<h1 class="pageTitle"> {{story.name}} Szenen</h1>
+
+			<div class="card-deck justify-content-center">
+				<!-- Jede Szene als Karte mit kurzen Informationen -->
+				<div *ngFor="let scene of story.scenes; index as i;" class="card-with-limits" (click)="selectScene(i)" [class.border-2]="i == sceneIndex">
+					<h5 class="card-header">
+						{{scene.name}}
+					</h5>
+					<div class="card-body">
+						<p class="card-text">
+							Card content
+						</p>
+					</div>
+					<div class="card-footer">
+						Card footer
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<hr/>
+
+	<div>
+		<p [innerText]="messageFromUnity"></p>
+	</div>
+
+	<div class="row-spaced justify-content-center">
+		<div class="col-md-6">
+			<app-unity-web-gl></app-unity-web-gl>
+		</div>
+		<div class="col-md-6 restrictHeight">
+			<!-- Eigene Komponente für die Übersicht bei möglicher späteren Erweiterung-->
+			<app-textfield></app-textfield>
+		</div>
+	</div>
+
+	<div class="row-spaced">
+		<div class="col-md-12">
+			<app-microphone></app-microphone>
+		</div>
+	</div>
+
+</div>
+
+
+
+
+
