--- a/reading-fluency-application/src/app/textfield/textfield.component.html
+++ b/reading-fluency-application/src/app/textfield/textfield.component.html
@@ -1,1 +1,1 @@
-<p>textfield works!</p>
+<textarea readonly style="resize: none; width: 100%;height: 100%; box-sizing: border-box;" [value]="currentScene.text"></textarea>
