--- a/reading-fluency-application/src/app/microphone/microphone.component.html
+++ b/reading-fluency-application/src/app/microphone/microphone.component.html
@@ -4,23 +4,35 @@
 	<div class="row justify-content-center">
 
 		<div class="col-md-2">
-			<i class="bi bi-record-circle-fill black"></i>
-			<i class="bi bi-arrow-bar-left"></i>
-			<button type="button" class="btn btn-success" (click)="startRecording()">
-				Start recording
+<!--			<i class="bi bi-record-circle-fill black"></i>-->
+<!--			<i class="bi bi-arrow-bar-left"></i>-->
+			<button type="button"
+					class="btn btn-success"
+					[innerText]="!canAnalyzeAudio ? 'Start recording' : 'Record again'"
+					[ngClass]="recordingStarted ? 'not-clickable' : ''"
+					(click)="recordingStart()" >
 			</button>
 		</div>
 
 		<div class="col-md-2">
-			<button type="button" class="btn btn-success" (click)="stopRecording()">
+			<button type="button"
+					class="btn btn-success"
+					[ngClass]="!recordingStarted ? 'not-clickable' : ''"
+					(click)="recordingStop()">
 				Stop recording
 			</button>
 		</div>
 
 		<div class="col-md-2">
-			<button type="button" class="btn btn-success">
-				Replay
+			<button type="button"
+					class="btn btn-success"
+					[ngClass]="!canAnalyzeAudio ? 'not-clickable' : ''">
+				Audio Analysieren
 			</button>
 		</div>
 	</div>
+
+	<audio controls="" *ngIf="recordingStarted != undefined && !recordingStarted" class="mt-3">
+		<source [src]="sanitizeAudioUrl(audioURL)" type="audio/wav">
+	</audio>
 </div>
