--- a/reading-fluency-application/src/styles.scss
+++ b/reading-fluency-application/src/styles.scss
@@ -4,9 +4,12 @@
 // Mit .scss kann man Eigenschaften anderer Klassen verwenden.
 
 .pageTitle {
-	@extend .mb-5;
-	@extend .mt-4;
+	@extend .mt-2;
 	@extend .text-center;
+}
+
+.textfield {
+	height: 25rem;
 }
 
 .row-spaced {
@@ -14,8 +17,8 @@
 	@extend .p-4;
 	@extend .m-2;
 
-	@extend .border;
-	@extend .border-dark;
+	//@extend .border;
+	//@extend .border-dark;
 }
 
 .restrictHeight {
@@ -30,8 +33,13 @@
 	margin-left: 0.5rem !important;
 	margin-right: 0.5rem !important;
 
-	min-width: 15rem;
-	max-width: 15rem;
+	min-width: 10rem;
+	max-width: 10rem;
+}
+
+.scene-image {
+	min-width: 10rem;
+	max-width: 10rem;
 }
 
 .border-2 {
@@ -48,6 +56,13 @@
 
 	&:hover {
 		cursor: not-allowed;
+	}
+}
+
+.clickable {
+
+	&:hover {
+		cursor: pointer;
 	}
 }
 
