--- a/reading-fluency-application/src/app/microphone/microphone.component.html
+++ b/reading-fluency-application/src/app/microphone/microphone.component.html
@@ -1,7 +1,7 @@
 <div class="text-center mt-4">
 	<div class="row justify-content-center">
 
-		<div class="col-md-4">
+		<div class="col-md-4 mb-2">
 			<button type="button"
 					class="btn btn-success"
 					[ngClass]="recordingStarted ? 'not-clickable' : ''"
@@ -11,7 +11,7 @@
 			</button>
 		</div>
 
-		<div class="col-md-4">
+		<div class="col-md-4 mb-2">
 			<button type="button"
 					class="btn btn-success"
 					[ngClass]="!recordingStarted ? 'not-clickable' : ''"
