Angular - change button name

--- a/reading-fluency-application/src/app/microphone/microphone.component.html
+++ b/reading-fluency-application/src/app/microphone/microphone.component.html
@@ -7,7 +7,7 @@
 					[ngClass]="recordingStarted ? 'not-clickable' : ''"
 					[disabled]="recordingStarted"
 					(click)="startRecording()">
-				Start recording
+				Aufnahme starten
 			</button>
 		</div>
 
@@ -17,7 +17,7 @@
 					[ngClass]="!recordingStarted ? 'not-clickable' : ''"
 					[disabled]="!recordingStarted"
 					(click)="stopRecording()">
-				Stop recording
+				Aufnahme stoppen
 			</button>
 		</div>
 	</div>
